fixed text-align in location

--- a/src/containers/locations/LeftColumn/leftColumn.css
+++ b/src/containers/locations/LeftColumn/leftColumn.css
@@ -49,9 +49,9 @@
     width: 33%;
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
     justify-content: flex-end;
     padding-right: 30px;
+    text-align: right;
 }
 
 .headerDiv div {
